# turtlebott

./: .gitignore  LICENSE  README.md  config.example.yml  example.env  pyproject.toml  requirements.txt
tests/: battle_panel.py  realtime_gemini.py
tools/: dndbeyond_to_json.py
turtlebott/: __init__.py  __main__.py  bot.py  config.py
turtlebott/modules/: ai_suprise.py  battle_panel.py  builtin.py  chatbot.py  dndhelper.py  example.py  musicplayer.py  randfun.py
turtlebott/utils/: debug.py  dice.py  dnd_beyond_parser.py  dnd_views.py  logger.py  module_loader.py
