[project]
name = "turtlebott"
version = "1.0.0"
description = "A multi-purpose Discord bot, for random experiments of mine."
authors = [{ name = "Turtledevv", email = "contact@turtldev.online" }]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["discord", "bot", "automation", "python", "experiments"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent" # Note to self; maybe should change this? I mean, yeah, it's OS independent, APART FROM the battle panel module. Eh, whatevs.
]
requires-python = ">=3.10"
dependencies = [
    "discord.py",
    "python-dotenv",
    "PyYAML",

    # Required for battle panel module
    "pydirectinput",

    # Required for music player module
    "PyNaCl",
    "yt-dlp",

    # Required for chatbot module
    "google-genai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

